// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GenericDocumentCitation renders  component when no title 1`] = `
<div>
  <div
    class="citationContent citationGenericDocument"
  >
    <span
      class="citationAuthors"
    >
      <span
        class="citationAuthor"
        data-testid="rek-author-0"
      >
        Louise Olsen-Kettle
      </span>
       
    </span>
    <span
      class="citationDate"
    >
      (
      2011
      ).
    </span>
    <span
      class="citationTitle empty"
    />
    <span
      class="citationPublisher empty"
    />
    <span
      class="citationDOI empty"
    />
  </div>
</div>
`;

exports[`GenericDocumentCitation renders  component with a mock espace record 1`] = `
<div>
  <div
    class="citationContent citationGenericDocument"
  >
    <span
      class="citationAuthors"
    >
      <span
        class="citationAuthor"
        data-testid="rek-author-0"
      >
        Louise Olsen-Kettle
      </span>
       
    </span>
    <span
      class="citationDate"
    >
      (
      2011
      ).
    </span>
    <span
      class="citationTitle"
    >
       
      Numerical solution of partial differential equations
      .
    </span>
    <span
      class="citationPublisher empty"
    />
    <span
      class="citationDOI empty"
    />
  </div>
</div>
`;

exports[`GenericDocumentCitation renders  component with an empty publisher and title 1`] = `
<div>
  <div
    class="citationContent citationGenericDocument"
  >
    <span
      class="citationAuthors"
    >
      <span
        class="citationAuthor"
        data-testid="rek-author-0"
      >
        Louise Olsen-Kettle
      </span>
       
    </span>
    <span
      class="citationDate"
    >
      (
      2011
      ).
    </span>
    <span
      class="citationTitle empty"
    />
    <span
      class="citationPublisher empty"
    />
    <span
      class="citationDOI empty"
    />
  </div>
</div>
`;

exports[`GenericDocumentCitation renders  component with empty publication 1`] = `
<div>
  <div
    class="citationContent citationGenericDocument"
  >
    <span
      class="citationAuthors empty"
    />
    <span
      class="citationDate empty"
    />
    <span
      class="citationTitle empty"
    />
    <span
      class="citationPublisher empty"
    />
    <span
      class="citationDOI empty"
    />
  </div>
</div>
`;
